Bug 1140134 - Don't skip the rest of the properties in an animation after hitting one that we shouldn't apply. r=dholbert, a=lmandel

Both sets of new tests pass with the patch, but without the patch the
"top is animating" test fails.